--- a/style.css
+++ b/style.css
@@ -2,4 +2,6 @@ body {
   background: ##f4f4f4;
   background-image: url("zenbg.png");
   font-family: 'Roboto', sans-serif;
+  font-weight: 100;
+  color: #303030;
 }
