--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
   font-family: 'Roboto', sans-serif;
   font-weight: 100;
   color: #303030;
+  text-align: center;
 }
 
 h1 h2 h3 h4 h5 h6 {
