--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background: ##f4f4f4;
+  background: #f4f4f4;
   background-image: url("zenbg.png");
   font-family: 'Roboto', sans-serif;
   font-weight: 100;
