--- a/style.css
+++ b/style.css
@@ -2,11 +2,19 @@ body {
   background: #f4f4f4;
   background-image: url("zenbg.png");
   font-family: 'Roboto', sans-serif;
-  font-weight: 100;
+  font-weight: 100;ba
   color: #303030;
   text-align: center;
 }
 
 h1 h2 h3 h4 h5 h6 {
   font-weight: 100;
+}
+
+.rounded {
+  border-radius: 16px;
+}
+
+.white-bg {
+  background-color: #fff;
 }
