--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@ body {
   background: #f4f4f4;
   background-image: url("zenbg.png");
   font-family: 'Roboto', sans-serif;
-  font-weight: 100;ba
+  font-weight: 100;
+  font-size: 32px;
   color: #303030;
   text-align: center;
 }
@@ -15,6 +16,7 @@ body {
 
 h1 h2 h3 h4 h5 h6 {
   font-weight: 100;
+  font-size: 48px;
 }
 
 .rounded {
@@ -51,8 +53,7 @@ and (min-device-width : 768px)
 and (max-device-width : 1024px) {
 /* Styles */
 h1 {
-  font-size: 42px;
-}
+  font-size: 64px;
 
 /* iPads (landscape) ----------- */
 @media only screen 
