--- a/style.css
+++ b/style.css
@@ -8,6 +8,12 @@ body {
   text-align: center;
 }
 
+header {
+  width: 100%;
+  background-color: #000;
+  position: fixed;
+}
+
 #container {
   width: 60%;
   margin-left: auto;
