--- a/style.css
+++ b/style.css
@@ -16,10 +16,10 @@ header {
 }
 
 #container {
-  margin-top: 60px;
   width: 60%;
   margin-left: auto;
   margin-right: auto;
+  padding-top: 60px;
 }
 
 h1 h2 h3 h4 h5 h6 {
