--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+html, body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%
+}
+
 body {
   background: #f4f4f4;
   background-image: url("zenbg.png");
