--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ header {
   width: 60%;
   margin-left: auto;
   margin-right: auto;
-  padding-top: 60px;
+  margin-top: 60px;
 }
 
 h1 h2 h3 h4 h5 h6 {
