--- a/style.css
+++ b/style.css
@@ -1,107 +1,1 @@
-html, body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%
-}
-
-body {
-  background: #f4f4f4;
-  background-image: url("zenbg.png");
-  font-family: 'Roboto', sans-serif;
-  font-weight: 100;
-  font-size: 32px;
-  color: #303030;
-  text-align: center;
-  top: 0px;
-  left: 0px;
-}
-
-header {
-  width: 100%;
-  margin: 0px;
-  background-color: #fff;
-  position: fixed;
-}
-
-#container {
-  width: 60%;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-h1 h2 h3 h4 h5 h6 {
-  font-weight: 100;
-  font-size: 48px;
-}
-
-.rounded {
-  border-radius: 16px;
-  padding: 30px;
-}
-
-.white-bg {
-  background-color: #fff;
-}
-
-/* Smartphones (portrait and landscape) ----------- */
-@media only screen 
-and (min-device-width : 320px) 
-and (max-device-width : 480px) {
-/* Styles */
-}
-
-/* Smartphones (landscape) ----------- */
-@media only screen 
-and (min-width : 321px) {
-/* Styles */
-}
-
-/* Smartphones (portrait) ----------- */
-@media only screen 
-and (max-width : 320px) {
-/* Styles */
-}
-
-/* iPads (portrait and landscape) ----------- */
-@media only screen 
-and (min-device-width : 768px) 
-and (max-device-width : 1024px) {
-/* Styles */
-h1 {
-  font-size: 64px;
-
-/* iPads (landscape) ----------- */
-@media only screen 
-and (min-device-width : 768px) 
-and (max-device-width : 1024px) 
-and (orientation : landscape) {
-/* Styles */
-}
-
-/* iPads (portrait) ----------- */
-@media only screen 
-and (min-device-width : 768px) 
-and (max-device-width : 1024px) 
-and (orientation : portrait) {
-/* Styles */
-}
-
-/* Desktops and laptops ----------- */
-@media only screen 
-and (min-width : 1224px) {
-/* Styles */
-}
-
-/* Large screens ----------- */
-@media only screen 
-and (min-width : 1824px) {
-/* Styles */
-}
-
-/* iPhone 4 ----------- */
-@media
-only screen and (-webkit-min-device-pixel-ratio : 1.5),
-only screen and (min-device-pixel-ratio : 1.5) {
-/* Styles */
-}
+body{color:#333}
