--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,14 @@
 /******General******/
 /*Fonts*/
 /*Universals*/
+::selection {
+  color: black;
+  background-color: red;
+}
+
 body {
   background-color: white;
-  color: #303030;
+  color: #4a4a4a;
   margin: 0;
   height: 100%;
   width: 100%;
@@ -21,15 +26,37 @@ header {
   margin: 0px;
   padding: 0px;
   text-align: center;
+  text-shadow: 10px 10px #cacaca;
 }
 
+/*Pitch Pipe Styling*/
 #pitch-pipe {
   margin-top: 20px;
 }
 
-::selection {
-  color: black;
-  background-color: red;
+#container {
+  margin: 5%;
+}
+
+#circle {
+  position: relative;
+  width: 100%;
+  padding-bottom: 100%;
+  overflow: hidden;
+}
+
+#circle text {
+  font-family: Monospace;
+  font-size: 32px;
+  font-weight: bold;
+}
+
+#circle svg {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
 }
 
 /*Classes*/
@@ -48,5 +75,11 @@ header {
   border-radius: 50%;
   width: 600px;
   height: 600px;
-  background-color: #303030;
+  background-color: #4a4a4a;
+  color: white;
+}
+
+.selector {
+  position: relative;
+  margin-top: -300px;
 }
