--- a/css/style.scss
+++ b/css/style.scss
@@ -1,7 +1,7 @@
 /******SCSS Variables******/
 
 /*Colors*/
-$primary-color: #303030;
+$primary-color: #4A4A4A;
 $background-color: #fff;
 $sel-color: #000;
 $sel-bg-color: red;
@@ -22,7 +22,13 @@ $retina: 'screen and (-webkit-min-device-pixel-ratio: 2)';
 /*Fonts*/
 
 
+
 /*Universals*/
+::selection {
+  color: $sel-color;
+  background-color: $sel-bg-color;
+}
+
 body {
   background-color: $background-color;
   color: $primary-color;
@@ -39,15 +45,36 @@ header {
   margin: 0px;
   padding: 0px;
   text-align: center;
+  text-shadow: 10px 10px lighten($primary-color, 50%);
 }
 
+/*Pitch Pipe Styling*/
 #pitch-pipe {
   margin-top: $pitch-pipe-margin;
 }
+#container {
+  margin: 5%;
+}
 
-::selection {
-  color: $sel-color;
-  background-color: $sel-bg-color;
+#circle {
+  position: relative;
+  width: 100%;
+  padding-bottom: 100%;
+  overflow: hidden;
+}
+
+#circle text {
+  font-family: Monospace;
+  font-size: 32px;
+  font-weight: bold;
+}
+
+#circle svg {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
 }
 
 /*Classes*/
@@ -67,4 +94,10 @@ header {
   width: 600px;
   height: 600px;
   background-color: $primary-color;
+  color: $background-color;
+}
+
+.selector {
+  position: relative;
+  margin-top: -300px;
 }
