--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,14 @@
 /*Dimensions*/
 /******General******/
 /*Fonts*/
+.flat {
+  font-size: 22px;
+}
+
+.sharp {
+  font-size: 20px;
+}
+
 /*Universals*/
 ::selection {
   color: black;
@@ -24,6 +32,15 @@ header {
   font: 32px "Oleo Script", sans-serif;
   width: 100%;
   margin: 0px;
+  padding: 0px;
+  text-align: center;
+  text-shadow: 3px 3px #98e1b1;
+}
+
+footer {
+  font: 12px "Oleo Script", sans-serif;
+  width: 100%;
+  margin: 50%;
   padding: 0px;
   text-align: center;
   text-shadow: 3px 3px #98e1b1;
