--- a/css/style.css
+++ b/css/style.css
@@ -37,16 +37,20 @@ header {
   text-shadow: 4px 4px #33ad5c;
 }
 
-footer {
-  font: 12px "Oleo Script", sans-serif;
+/*******Pitch Pipe******/
+/*Sizing Classes*/
+.container {
   width: 100%;
-  margin: 50%;
-  padding: 0px;
-  text-align: center;
+  height: 100%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-/*******Pitch Pipe******/
-/*SVG*/
+.circle {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 #pitch-pipe {
   margin-top: 80px;
   width: 600px;
@@ -55,6 +59,7 @@ footer {
   margin-right: auto;
 }
 
+/*SVG*/
 #circle {
   position: relative;
   width: 100%;
@@ -85,17 +90,20 @@ footer {
   height: 123.67%;
 }
 
-/*Classes*/
-.container {
-  width: 100%;
-  height: 100%;
+/*Output Display*/
+#output {
+  position: relative;
   margin-left: auto;
   margin-right: auto;
-}
-
-.circle {
-  margin-left: auto;
-  margin-right: auto;
+  margin-top: -125%;
+  height: 50%;
+  width: 50%;
+  z-index: 1;
+  text-align: center;
+  font-family: Helvetica, sans-serif;
+  font-size: 150px;
+  font-weight: bold;
+  color: #e3e3e3;
 }
 
 /******Responsive Sizes******/
@@ -105,12 +113,20 @@ footer {
     width: 300px;
     height: 300px;
   }
+
+  #output {
+    margin-top: -120%;
+  }
 }
 /* Smartphones (landscape) ----------- */
 @media only screen and (min-width: 321px) {
   #pitch-pipe {
     width: 600px;
     height: 600px;
+  }
+
+  #output {
+    margin-top: -120%;
   }
 }
 /* Smartphones (portrait) ----------- */
@@ -119,12 +135,20 @@ footer {
     width: 200px;
     height: 200px;
   }
+
+  #output {
+    margin-top: -120%;
+  }
 }
 /* iPads (portrait and landscape) ----------- */
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
   #pitch-pipe {
     width: 600px;
     height: 600px;
+  }
+
+  #output {
+    margin-top: -120%;
   }
 }
 /* iPads (landscape) ----------- */
@@ -133,12 +157,20 @@ footer {
     width: 600px;
     height: 600px;
   }
+
+  #output {
+    margin-top: -120%;
+  }
 }
 /* iPads (portrait) ----------- */
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
   #pitch-pipe {
     width: 600px;
     height: 600px;
+  }
+
+  #output {
+    margin-top: -120%;
   }
 }
 /**********
@@ -149,11 +181,19 @@ iPad 3
     width: 400px;
     height: 400px;
   }
+
+  #output {
+    margin-top: -120%;
+  }
 }
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 2) {
   #pitch-pipe {
     width: 600px;
     height: 600px;
+  }
+
+  #output {
+    margin-top: -120%;
   }
 }
 /* Desktops and laptops ----------- */
@@ -162,12 +202,20 @@ iPad 3
     width: 600px;
     height: 600px;
   }
+
+  #output {
+    margin-top: -119%;
+  }
 }
 /* Large screens ----------- */
 @media only screen and (min-width: 1824px) {
   #pitch-pipe {
     width: 800px;
     height: 800px;
+  }
+
+  #output {
+    margin-top: -100%;
   }
 }
 /* iPhone 4 ----------- */
