Fix output margin errors

--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ header {
   position: relative;
   margin-left: auto;
   margin-right: auto;
-  margin-top: -125%;
+  margin-top: -110px;
   height: 50%;
   width: 50%;
   z-index: 1;
@@ -126,7 +126,7 @@ header {
   }
 
   #output {
-    margin-top: -120%;
+    margin-top: -115%;
   }
 }
 /* Smartphones (portrait) ----------- */
@@ -148,7 +148,7 @@ header {
   }
 
   #output {
-    margin-top: -120%;
+    margin-top: -115%;
   }
 }
 /* iPads (landscape) ----------- */
@@ -170,7 +170,7 @@ header {
   }
 
   #output {
-    margin-top: -120%;
+    margin-top: -115%;
   }
 }
 /**********
@@ -204,18 +204,19 @@ iPad 3
   }
 
   #output {
-    margin-top: -119%;
+    margin-top: -115%;
   }
 }
 /* Large screens ----------- */
 @media only screen and (min-width: 1824px) {
   #pitch-pipe {
-    width: 800px;
-    height: 800px;
+    width: 700px;
+    height: 700px;
   }
 
   #output {
-    margin-top: -100%;
+    margin-top: -110%;
+    font-size: 164px;
   }
 }
 /* iPhone 4 ----------- */
