--- a/css/style.scss
+++ b/css/style.scss
@@ -122,6 +122,9 @@ footer {
   color: $background-color;
 }
 
+#output b {
+  font-size: 24px;
+}
 /******Responsive Sizes******/
 
 /* Smartphones (portrait and landscape) ----------- */
