small phone sizing

--- a/css/style.scss
+++ b/css/style.scss
@@ -130,11 +130,13 @@ footer {
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
   #pitch-pipe {
-    width: 300px;
-    height: 300px;
+    margin-top: 55px;
+    width: 200px;
+    height: 200px;
   }
   #output {
-    margin-top: -120%;
+    margin-top: -112%;
+    font-size: 48px;
   }
 }
 
@@ -153,8 +155,9 @@ footer {
 /* Smartphones (portrait) ----------- */
 @media only screen and (max-width : 320px) {
   #pitch-pipe {
-  width: 200px;
-  height: 200px;
+    margin-top: 55px;
+    width: 200px;
+    height: 200px;
   }
   #output {
     margin-top: -112%;
