--- a/css/style.css
+++ b/css/style.css
@@ -114,12 +114,14 @@ header {
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
   #pitch-pipe {
-    width: 300px;
-    height: 300px;
+    margin-top: 55px;
+    width: 200px;
+    height: 200px;
   }
 
   #output {
-    margin-top: -120%;
+    margin-top: -112%;
+    font-size: 48px;
   }
 }
 /* Smartphones (landscape) ----------- */
@@ -137,6 +139,7 @@ header {
 /* Smartphones (portrait) ----------- */
 @media only screen and (max-width: 320px) {
   #pitch-pipe {
+    margin-top: 55px;
     width: 200px;
     height: 200px;
   }
