--- a/css/style.scss
+++ b/css/style.scss
@@ -142,9 +142,13 @@ footer {
 
 /* Smartphones (landscape) ----------- */
 @media only screen and (min-width : 321px) {
+  header {
+    font-size: 14px;
+  }
   #pitch-pipe {
-    width: 450px;
-    height: 450px;
+    margin-top: 25px;
+    width: 150px;
+    height: 150px;
   }
   #output {
     margin-top: -117%;
