--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,7 @@ header {
 @media only screen and (min-width: 321px) {
   header {
     font-size: 14px;
+    text-shadow: 1px 1px #33ad5c;
   }
 
   #pitch-pipe {
