--- a/css/style.scss
+++ b/css/style.scss
@@ -144,6 +144,7 @@ footer {
 @media only screen and (min-width : 321px) {
   header {
     font-size: 14px;
+    text-shadow: 1px 1px $primary-color;
   }
   #pitch-pipe {
     margin-top: 25px;
