--- a/css/style.css
+++ b/css/style.css
@@ -51,8 +51,10 @@ header {
   margin-right: auto;
 }
 
+/*Main*/
 #pitch-pipe {
   margin-top: 80px;
+  position: relative;
   width: 450px;
   height: 450px;
   margin-left: auto;
@@ -60,6 +62,13 @@ header {
 }
 
 /*SVG*/
+#pitch-pipe-svg {
+  width: 100%;
+  height: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 #circle {
   position: relative;
   width: 100%;
@@ -84,26 +93,37 @@ header {
 /*Selector*/
 #selector {
   position: relative;
-  margin-top: -112.5%;
-  margin-left: -11.5%;
+  margin-top: -112.3%;
+  margin-left: -11.7%;
   width: 123.67%;
   height: 123.67%;
 }
 
 /*Output Display*/
-#output {
-  position: relative;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: -127%;
+#output-circle {
+  position: absolute;
+  margin-left: 25%;
+  margin-top: -87%;
   height: 50%;
   width: 50%;
+  background-color: white;
+  border-radius: 50%;
+  z-index: 1;
+}
+
+#output {
+  position: absolute;
+  margin-left: 0%;
+  margin-top: -5%;
+  height: 100%;
+  width: 100%;
   z-index: 1;
   text-align: center;
   font-family: Helvetica, sans-serif;
-  font-size: 9em;
+  font-size: 100px;
   font-weight: bold;
-  color: #e3e3e3;
+  line-height: 0;
+  color: #33ad5c;
 }
 
 #output b {
@@ -111,3 +131,13 @@ header {
 }
 
 /******Responsive Sizes******/
+@media screen and (max-width: 480px) {
+  #pitch-pipe {
+    height: 150px;
+    width: 150px;
+  }
+
+  #output {
+    font-size: 32px;
+  }
+}
