--- a/css/style.scss
+++ b/css/style.scss
@@ -65,9 +65,10 @@ footer {
   margin-left: auto;
   margin-right: auto;
 }
-
+/*Main*/
 #pitch-pipe {
   margin-top: $pitch-pipe-margin;
+  position: relative;
   width: 450px;
   height: 450px;
   margin-left: auto;
@@ -75,6 +76,12 @@ footer {
 }
 
 /*SVG*/
+#pitch-pipe-svg {
+  width: 100%;
+  height: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
 
 #circle {
   position: relative;
@@ -100,29 +107,48 @@ footer {
 /*Selector*/
 #selector {
   position: relative;
-  margin-top: -112.5%;
-  margin-left: -11.5%;
+  margin-top: -112.3%;
+  margin-left: -11.7%;
   width: 123.67%;
   height: 123.67%;
 }
 
 /*Output Display*/
-#output {
-  position: relative;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: -127%;
+#output-circle {
+  position: absolute;
+  margin-left: 25%;
+  margin-top: -87%;
   height: 50%;
   width: 50%;
+  background-color: white;
+  border-radius: 50%;
+  z-index: 1;
+}
+#output {
+  position: absolute;
+  margin-left: 0%;
+  margin-top: -5%;
+  height: 100%;
+  width: 100%;
   z-index: 1;
   text-align: center;
   font-family: Helvetica, sans-serif;
-  font-size: 9em;
+  font-size: 100px;
   font-weight: bold;
-  color: $background-color;
+  line-height: 0;
+  color: $primary-color;
 }
 
 #output b {
   font-size: 0.5em;
 }
 /******Responsive Sizes******/
+@media screen and (max-width: 480px) {
+  #pitch-pipe {
+    height: 150px;
+    width: 150px;
+  }
+  #output {
+    font-size: 32px;
+  }
+}
