--- a/css/style.scss
+++ b/css/style.scss
@@ -143,12 +143,24 @@ footer {
   font-size: 0.5em;
 }
 /******Responsive Sizes******/
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 548px) {
+  header {
+    font-size: 24px;
+  }
   #pitch-pipe {
-    height: 150px;
-    width: 150px;
+    height: 220px;
+    width: 220px;
   }
   #output {
-    font-size: 32px;
+    font-size: 48px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  #pitch-pipe {
+    height: 650px;
+    width: 650px;
+  }
+  #output {
+    font-size: 144px;
   }
 }
