Redo available sizes

--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,7 @@ header {
 
 /******Responsive Sizes******/
 /*iPhone 3 and 4*/
-@media screen and (max-width: 548px) and (orientation: portrait) {
+@media screen and (min-width: 320px) and (max-width: 480px) and (orientation: portrait) {
   header {
     font-size: 24px;
   }
@@ -146,14 +146,12 @@ header {
     font-size: 48px;
   }
 }
-/*iPhone 5 +*/
-@media screen and (max-width: 548px) {
+@media screen and (min-width: 320px) and (max-width: 480px) and (orientation: portrait) {
   header {
-    font-size: 18px;
+    font-size: 24px;
   }
 
   #pitch-pipe {
-    margin-top: 20px;
     height: 220px;
     width: 220px;
   }
@@ -161,50 +159,4 @@ header {
   #output {
     font-size: 48px;
   }
-}
-@media screen and (min-width: 1280px) {
-  #pitch-pipe {
-    height: 650px;
-    width: 650px;
-  }
-
-  #output {
-    font-size: 144px;
-  }
-}
-/* Smartphones (portrait and landscape) ----------- */
-@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
-  /* Styles */
-}
-/* Smartphones (landscape) ----------- */
-@media only screen and (min-width: 321px) {
-  /* Styles */
-}
-/* Smartphones (portrait) ----------- */
-@media only screen and (max-width: 320px) {
-  /* Styles */
-}
-/* iPads (portrait and landscape) ----------- */
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
-  /* Styles */
-}
-/* iPads (landscape) ----------- */
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
-  /* Styles */
-}
-/* iPads (portrait) ----------- */
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
-  /* Styles */
-}
-/* Desktops and laptops ----------- */
-@media only screen and (min-width: 1224px) {
-  /* Styles */
-}
-/* Large screens ----------- */
-@media only screen and (min-width: 1824px) {
-  /* Styles */
-}
-/* iPhone 4 ----------- */
-@media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) {
-  /* Styles */
 }
