--- a/css/style.scss
+++ b/css/style.scss
@@ -164,15 +164,15 @@ and (orientation: portrait) {
 @media screen
 and (min-width: 320px)
 and (max-width: 480px)
-and (orientation: portrait) {
+and (orientation: landscape) {
   header {
     font-size: 24px;
   }
   #pitch-pipe {
-    height: 220px;
-    width: 220px;
+    height: 180px;
+    width: 180px;
   }
   #output {
-    font-size: 48px;
+    font-size: 38px;
   }
 }
