--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,9 @@ body {
   width: 100%;
   position: fixed;
   top: 0px;
+  background: #bfbfbf;
+  background-image: url("zenbg-1.png"), url("zenbg-2.png");
+  background-repeat: repeat-x, repeat;
 }
 
 header {
@@ -41,10 +44,9 @@ footer {
   position: fixed;
   background-color: white;
   width: 100%;
-  height: 60px;
   bottom: 0px;
   text-align: center;
-  padding-bottom: 16px;
+  padding: 0px;
 }
 
 /*******Pitch Pipe******/
@@ -107,10 +109,11 @@ footer {
 /*Selector*/
 #selector {
   position: relative;
-  margin-top: -112.3%;
-  margin-left: -11.7%;
+  margin-top: -111.8%;
+  margin-left: -11.85%;
   width: 123.67%;
   height: 123.67%;
+  data-fgColor: #33AD5C;
 }
 
 /*Output Display*/
@@ -160,13 +163,19 @@ footer {
   #output {
     font-size: 48px;
   }
+
+  footer {
+    font-size: 16px;
+  }
 }
 @media screen and (min-width: 320px) and (max-width: 480px) and (orientation: landscape) {
   header {
-    font-size: 24px;
+    font-size: 14px;
+    margin-top: 10px;
   }
 
   #pitch-pipe {
+    margin-top: 10px;
     height: 180px;
     width: 180px;
   }
