--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,7 @@ footer {
   bottom: 0px;
   text-align: center;
   padding: 0px;
+  font-size: 30px;
 }
 
 /*******Pitch Pipe******/
@@ -165,22 +166,27 @@ footer {
   }
 
   footer {
-    font-size: 16px;
+    font-size: 24px;
   }
 }
 @media screen and (min-width: 320px) and (max-width: 480px) and (orientation: landscape) {
   header {
+    margin-top: 0px;
     font-size: 14px;
-    margin-top: 10px;
+    margin-top: 0px;
   }
 
   #pitch-pipe {
     margin-top: 10px;
-    height: 180px;
-    width: 180px;
+    height: 140px;
+    width: 140px;
   }
 
   #output {
-    font-size: 38px;
+    font-size: 30px;
+  }
+
+  footer {
+    font-size: 12px;
   }
 }
