--- a/css/style.scss
+++ b/css/style.scss
@@ -51,6 +51,7 @@ header {
   padding: 0px;
   text-align: center;
   text-shadow: 4px 4px $primary-color;
+  line-height: 1;
 }
 
 footer {
@@ -187,17 +188,21 @@ and (min-width: 320px)
 and (max-width: 480px)
 and (orientation: landscape) {
   header {
-    margin-top: 0px;
-    font-size: 14px;
-    margin-top: 0px;
+    width: 20%;
+    float: left;
+    margin-top: 8px;
+    margin-left: 20px;
+    font-size: 20px;
   }
   #pitch-pipe {
-    margin-top: 10px;
-    height: 140px;
-    width: 140px;
+    float: right;
+    margin-top: 48px;;
+    margin-right: 40px;
+    height: 180px;
+    width: 180px;
   }
   #output {
-    font-size: 30px;
+    font-size: 38px;
   }
   footer {
     font-size: 12px;
@@ -223,27 +228,5 @@ and (orientation: portrait) {
   }
   footer {
     font-size: 24px;
-  }
-}
-
-@media screen
-and (min-width: 320px)
-and (max-width: 568px)
-and (orientation: landscape) {
-  header {
-    margin-top: 0px;
-    font-size: 14px;
-    margin-top: 0px;
-  }
-  #pitch-pipe {
-    margin-top: 10px;
-    height: 140px;
-    width: 140px;
-  }
-  #output {
-    font-size: 30px;
-  }
-  footer {
-    font-size: 12px;
   }
 }
