--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ header {
   padding: 0px;
   text-align: center;
   text-shadow: 4px 4px #33ad5c;
+  line-height: 1;
 }
 
 footer {
@@ -171,19 +172,23 @@ footer {
 }
 @media screen and (min-width: 320px) and (max-width: 480px) and (orientation: landscape) {
   header {
-    margin-top: 0px;
-    font-size: 14px;
-    margin-top: 0px;
+    width: 20%;
+    float: left;
+    margin-top: 8px;
+    margin-left: 20px;
+    font-size: 20px;
   }
 
   #pitch-pipe {
-    margin-top: 10px;
-    height: 140px;
-    width: 140px;
+    float: right;
+    margin-top: 48px;
+    margin-right: 40px;
+    height: 180px;
+    width: 180px;
   }
 
   #output {
-    font-size: 30px;
+    font-size: 38px;
   }
 
   footer {
@@ -208,26 +213,5 @@ footer {
 
   footer {
     font-size: 24px;
-  }
-}
-@media screen and (min-width: 320px) and (max-width: 568px) and (orientation: landscape) {
-  header {
-    margin-top: 0px;
-    font-size: 14px;
-    margin-top: 0px;
-  }
-
-  #pitch-pipe {
-    margin-top: 10px;
-    height: 140px;
-    width: 140px;
-  }
-
-  #output {
-    font-size: 30px;
-  }
-
-  footer {
-    font-size: 12px;
   }
 }
