--- a/css/style.scss
+++ b/css/style.scss
@@ -190,19 +190,19 @@ and (orientation: landscape) {
   header {
     width: 20%;
     float: left;
-    margin-top: 8px;
-    margin-left: 20px;
+    margin-top: 48px;
+    margin-left: 60px;
     font-size: 20px;
   }
   #pitch-pipe {
-    float: right;
+    float: left;
     margin-top: 48px;;
-    margin-right: 40px;
-    height: 180px;
-    width: 180px;
+    margin-left: 40px;
+    height: 150px;
+    width: 150px;
   }
   #output {
-    font-size: 38px;
+    font-size: 32px;
   }
   footer {
     font-size: 12px;
