--- a/css/style.css
+++ b/css/style.css
@@ -215,3 +215,28 @@ footer {
     font-size: 24px;
   }
 }
+@media screen and (min-width: 320px) and (max-width: 568px) and (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) and (orientation: landscape) {
+  header {
+    width: 20%;
+    float: left;
+    margin-top: 48px;
+    margin-left: 60px;
+    font-size: 20px;
+  }
+
+  #pitch-pipe {
+    float: left;
+    margin-top: 48px;
+    margin-left: 40px;
+    height: 150px;
+    width: 150px;
+  }
+
+  #output {
+    font-size: 32px;
+  }
+
+  footer {
+    font-size: 12px;
+  }
+}
