--- a/css/style.scss
+++ b/css/style.scss
@@ -213,8 +213,8 @@ and (orientation: landscape) {
 @media screen
 and (min-width: 320px)
 and (max-width: 568px)
-and (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)
-and (orientation: portrait) {
+and (orientation: portrait)
+and (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
   header {
     font-size: 24px;
   }
@@ -234,8 +234,8 @@ and (orientation: portrait) {
 @media screen
 and (min-width: 320px)
 and (max-width: 568px)
-and (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)
-and (orientation: landscape) {
+and (orientation: landscape)
+and (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
   header {
     width: 20%;
     float: left;
