Attempt queries again

--- a/css/style.scss
+++ b/css/style.scss
@@ -211,8 +211,10 @@ and (orientation: landscape) {
 
 /*iPhone 5 +*/
 @media only screen
-and (min-device-width : 320px)
-and (max-device-width : 568px)
+and (min-device-width : 640px)
+and (max-device-width : 1136px)
+and (-webkit-min-device-pixel-ratio: 2)
+and (min-resoltion: 192dpi)
 and (orientation : portrait) {
   header {
     font-size: 24px;
@@ -231,8 +233,10 @@ and (orientation : portrait) {
 }
 
 @media only screen
-and (min-device-width : 320px)
-and (max-device-width : 568px)
+and (min-device-width : 640px)
+and (max-device-width : 1136px)
+and (-webkit-min-device-pixel-ratio: 2)
+and (min-resoltion: 192dpi)
 and (orientation : landscape) {
   header {
     width: 20%;
