--- a/css/style.scss
+++ b/css/style.scss
@@ -165,7 +165,7 @@ footer {
 /*iPhone 3 and 4*/
 @media screen
 and (min-width: 320px)
-and (max-width: 480px)
+and (max-width: 562px)
 and (orientation: portrait) {
   header {
     font-size: 24px;
@@ -185,70 +185,19 @@ and (orientation: portrait) {
 
 @media screen
 and (min-width: 320px)
-and (max-width: 480px)
+and (max-width: 562px)
 and (orientation: landscape) {
   header {
     width: 20%;
     float: left;
-    margin-top: 48px;
-    margin-left: 60px;
+    margin-top: 8%;
+    margin-left: 15%;
     font-size: 20px;
   }
   #pitch-pipe {
-    float: left;
-    margin-top: 48px;;
-    margin-left: 40px;
-    height: 150px;
-    width: 150px;
-  }
-  #output {
-    font-size: 32px;
-  }
-  footer {
-    font-size: 12px;
-  }
-}
-
-/*iPhone 5 +*/
-@media only screen
-and (min-device-width : 320px)
-and (max-device-width : 562px)
-and (-webkit-min-device-pixel-ratio: 2)
-and (min-resoltion: 192dpi)
-and (orientation : portrait) {
-  header {
-    font-size: 24px;
-  }
-  #pitch-pipe {
-    margin-top: 60px;
-    height: 220px;
-    width: 220px;
-  }
-  #output {
-    font-size: 48px;
-  }
-  footer {
-    font-size: 24px;
-  }
-}
-
-@media only screen
-and (min-device-width : 320px)
-and (max-device-width : 562px)
-and (-webkit-min-device-pixel-ratio: 2)
-and (min-resoltion: 192dpi)
-and (orientation : landscape) {
-  header {
-    width: 20%;
-    float: left;
-    margin-top: 48px;
-    margin-left: 60px;
-    font-size: 20px;
-  }
-  #pitch-pipe {
-    float: left;
-    margin-top: 48px;;
-    margin-left: 40px;
+    float: right;
+    margin-top: 10%;
+    margin-right: 25%;
     height: 150px;
     width: 150px;
   }
