--- a/css/style.scss
+++ b/css/style.scss
@@ -208,3 +208,31 @@ and (orientation: landscape) {
     font-size: 12px;
   }
 }
+
+@media screen
+and (min-width: 320px)
+and (max-width: 562px)
+and (-webkit-min-device-pixel-ratio: 2)
+and (min-resolution: 192dpi)
+and (orientation: landscape) {
+  header {
+    width: 20%;
+    float: left;
+    margin-top: 8%;
+    margin-left: 15%;
+    font-size: 20px;
+  }
+  #pitch-pipe {
+    float: right;
+    margin-top: 10%;
+    margin-right: 25%;
+    height: 150px;
+    width: 150px;
+  }
+  #output {
+    font-size: 32px;
+  }
+  footer {
+    font-size: 12px;
+  }
+}
