--- a/css/style.css
+++ b/css/style.css
@@ -195,7 +195,7 @@ footer {
     font-size: 12px;
   }
 }
-@media screen and (min-width: 320px) and (max-width: 562px) and (-webkit-min-device-pixel-ratio: 2) and (min-resolution: 192dpi) and (orientation: landscape) {
+@media only screen and (-webkit-min-device-pixel-ratio: 1.5) and (orientation: landscape), only screen and (min-device-pixel-ratio: 1.5) and (orientation: landscape) {
   header {
     width: 20%;
     float: left;
