--- a/css/style.css
+++ b/css/style.css
@@ -195,7 +195,8 @@ footer {
     font-size: 12px;
   }
 }
-@media only screen and (-webkit-min-device-pixel-ratio: 1.5) and (orientation: landscape), only screen and (min-device-pixel-ratio: 1.5) and (orientation: landscape) {
+/*iPhone 5 Fix*/
+@media only screen and (-webkit-min-device-pixel-ratio: 1.5) and (orientation: landscape) and (max-width: 562px), only screen and (min-device-pixel-ratio: 1.5) and (orientation: landscape) and (max-width: 562px) {
   header {
     width: 20%;
     float: left;
@@ -208,15 +209,16 @@ footer {
     float: right;
     margin-top: 10%;
     margin-right: 25%;
-    height: 150px;
-    width: 150px;
+    height: 180px;
+    width: 180px;
   }
 
   #output {
-    font-size: 32px;
+    font-size: 38px;
   }
 
   footer {
     font-size: 12px;
   }
 }
+/**/
