--- a/css/style.css
+++ b/css/style.css
@@ -170,7 +170,7 @@ footer {
     font-size: 24px;
   }
 }
-@media screen and (min-width: 320px) and (max-width: 562px) and (orientation: landscape) {
+@media screen and (min-width: 320px) and (max-width: 562px) and (orientation: landscape), screen and (min-width: 320px) and (max-width: 562px) and (orientation: landscape) and (-webkit-min-pixel-ratio: 1.5), screen and (min-width: 320px) and (max-width: 562px) and (orientation: landscape) and (min-pixel-ratio: 1.5) {
   header {
     width: 20%;
     float: left;
@@ -183,34 +183,8 @@ footer {
     float: right;
     margin-top: 10%;
     margin-right: 25%;
-    height: 150px;
-    width: 150px;
-  }
-
-  #output {
-    font-size: 32px;
-  }
-
-  footer {
-    font-size: 12px;
-  }
-}
-/*iPhone 5 Fix*/
-@media only screen and (-webkit-min-device-pixel-ratio: 1.5) and (orientation: landscape) and (max-width: 562px), only screen and (min-device-pixel-ratio: 1.5) and (orientation: landscape) and (max-width: 562px) {
-  header {
-    width: 20%;
-    float: left;
-    margin-top: 8%;
-    margin-left: 15%;
-    font-size: 20px;
-  }
-
-  #pitch-pipe {
-    float: right;
-    margin-top: 10%;
-    margin-right: 25%;
-    height: 180px;
-    width: 180px;
+    height: 170px;
+    width: 170px;
   }
 
   #output {
