--- a/css/style.css
+++ b/css/style.css
@@ -195,4 +195,23 @@ footer {
     font-size: 12px;
   }
 }
-/**/
+/*iPhone 5 (placement)*/
+@media screen and (min-width: 320px) and (max-width: 568px) and (orientation: portrait) and (-webkit-min-pixel-ratio: 1.5), screen and (min-width: 320px) and (max-width: 568px) and (orientation: portrait) and (min-pixel-ratio: 1.5) {
+  header {
+    font-size: 24px;
+  }
+
+  #pitch-pipe {
+    margin-top: 60px;
+    height: 220px;
+    width: 220px;
+  }
+
+  #output {
+    font-size: 48px;
+  }
+
+  footer {
+    font-size: 24px;
+  }
+}
