--- a/css/style.scss
+++ b/css/style.scss
@@ -183,8 +183,8 @@ screen and (min-width: 320px) and (max-width: 568px) and (orientation: portrait)
 
 @media
 screen and (min-width: 320px) and (max-width: 568px) and (orientation: landscape),
-screen and (min-width: 320px) and (max-width: 568px) and (orientation: landscape) and (-webkit-min-pixel-ratio: 1.5),
-screen and (min-width: 320px) and (max-width: 568px) and (orientation: landscape) and (min-pixel-ratio: 1.5)  {
+screen and (min-width: 320px) and (max-width: 568px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1.5),
+screen and (min-width: 320px) and (max-width: 568px) and (orientation: landscape) and (min-device-pixel-ratio: 1.5)  {
   header {
     width: 20%;
     float: left;
@@ -209,8 +209,8 @@ screen and (min-width: 320px) and (max-width: 568px) and (orientation: landscape
 
 /*iPhone 5 (placement)*/
 @media
-screen and (min-width: 320px) and (max-width: 568px) and (orientation: portrait) and (-webkit-min-pixel-ratio: 1.5),
-screen and (min-width: 320px) and (max-width: 568px) and (orientation: portrait) and (min-pixel-ratio: 1.5)  {
+screen and (min-width: 320px) and (max-width: 568px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1.5),
+screen and (min-width: 320px) and (max-width: 568px) and (orientation: portrait) and (min-device-pixel-ratio: 1.5)  {
   header {
     font-size: 24px;
   }
