--- a/css/style.css
+++ b/css/style.css
@@ -253,6 +253,21 @@ footer {
   }
 }
 /*Small Tablet Landscape*/
+@media screen and (min-width: 768px) and (orientation: portrait), screen and (min-width: 768px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1.5), screen and (min-width: 768px) and (orientation: portrait) and (min-device-pixel-ratio: 1.5) {
+  header {
+    font-size: 50px;
+  }
+
+  #pitch-pipe {
+    width: 600px;
+    height: 600px;
+    margin-top: 120px;
+  }
+
+  #output {
+    font-size: 136px;
+  }
+}
 @media screen and (min-width: 768px) and (orientation: landscape), screen and (min-width: 768px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1.5), screen and (min-width: 768px) and (orientation: landscape) and (min-device-pixel-ratio: 1.5) {
   header {
     width: 20%;
@@ -279,7 +294,7 @@ footer {
     font-size: 24px;
   }
 }
-/*Table Landscape*/
+/*Desktop Landscape*/
 @media screen and (min-width: 1024px) and (orientation: landscape), screen and (min-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1.5), screen and (min-width: 1024px) and (orientation: landscape) and (min-device-pixel-ratio: 1.5) {
   header {
     width: 20%;
