--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,6 @@ footer {
   margin-left: -11.85%;
   width: 123.67%;
   height: 123.67%;
-  data-fgColor: #33AD5C;
 }
 
 /*Output Display*/
@@ -140,9 +139,9 @@ footer {
   width: 100%;
   z-index: 1;
   text-align: center;
-  font-family: Helvetica, sans-serif;
-  font-size: 90px;
-  font-weight: bold;
+  font-family: "Oswald", sans-serif;
+  font-weight: 700;
+  font-size: 88px;
   line-height: 0;
   color: #33ad5c;
 }
